styled welcome page and fixed post alignment and order etc

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -4,7 +4,27 @@
 @import url('https://fonts.googleapis.com/css?family=Poiret+One');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
+
+
+.left_featured{
+  position: absolute;
+  text-align: center;
+  margin-left: -50px;
+  h5{
+    margin-top: 3px;
+    width: 200px;
+    margin-left: 30px;
+    font-family: 'Lato', sans-serif;
+
+  }
+  a {
+    text-decoration: none;
+    width: 100px;
+    color: #ff598f;
+  }
+}
 
 
 
@@ -21,6 +41,41 @@ h3 {
 hr{
   width: 100%;
 }
+#main_hdr {
+  padding: 40px;
+  margin-top: -20px;
+
+  color: #000000;
+  font-size: 40px;
+  margin-left: 105px;
+
+
+  h3 {
+    text-align: center;
+    border-style: solid;
+    border-color: #6ed3cf;
+    border-width: 5px;
+    padding: 40px;
+    width: 575px;
+
+    height: 280px;
+  }
+  a{
+    font-family: 'Playfair Display', serif;
+
+    background: rgba(256,256,256, 0.8);
+    text-transform: capitalize;
+    text-decoration: none;
+    color: #9068be;
+  }
+}
+
+#main_hdr h3:hover{
+  color: $dark;
+}
+
+
+
 
 .image_catalog{
 //  border-color: $highlight;
